# Cpp-Project-Template

./: Build-CMake.ps1  CITATION.cff  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: build-test.yaml  cmake.yaml
src/: CMakeLists.txt  main.cpp
src/foo/: CMakeLists.txt  foo_private_test.cpp
tests/: CMakeLists.txt  foo_test.cpp
